# nebulizer

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  audio_clip.rs  emitter.rs  envelope.rs  grain.rs  grain_envelope.rs  lib.rs  main.rs  midi.rs  numeric.rs  params.rs  widgets.rs  window.rs
src/widgets/: envelope_plot.rs  parameter_knob.rs  waveform.rs
