[package]
name = "nebulizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
midir = "0.10.0"
midly = "0.5.3"
rand = "0.8.5"
rfd = "0.14.1"
rodio = "0.18.1"
egui_extras_xt = { git = "https://github.com/xTibor/egui_extras_xt.git", features=["knobs"] }
